--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nzdjb/static-site-generator",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Static site generator.",
   "main": "dist/src/index.js",
   "repository": "https://github.com/nzdjb/static-site-generator",
@@ -43,7 +43,6 @@
     "access": "public"
   },
   "files": [
-    "dist",
-    "README.md"
+    "dist/src"
   ]
 }
