--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,3 +14,4 @@ jobs:
       - uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
+          pull-request-title-pattern: "release${scope}: release${component} ${version}"
