--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,7 +17,7 @@ jobs:
           pull-request-title-pattern: "release${scope}: ${component} ${version}"
   publish:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.head_commit.message, "release(")
+    if: startsWith(github.event.head_commit.message, 'release(')
     steps:
       - uses: actions/checkout@v3
         with:
