--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,19 +15,19 @@ jobs:
         with:
           release-type: node
           pull-request-title-pattern: "release${scope}: ${component} ${version}"
-  publish:
-    runs-on: ubuntu-latest
-    if: startsWith(github.event.head_commit.message, 'release(')
-    steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+        if: ${{ steps.release.outputs.release_created }}
       - uses: actions/setup-node@v3
         with:
           node-version: "18.x"
+        if: ${{ steps.release.outputs.release_created }}
       - run: yarn install --frozen-lockfile --check-files
-      - run: yarn lint
+        if: ${{ steps.release.outputs.release_created }}
       - run: yarn build
+        if: ${{ steps.release.outputs.release_created }}
       - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+        if: ${{ steps.release.outputs.release_created }}
