--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,5 +1,9 @@
 name: Build
-on: [push]
+on:
+  push:
+  pull_request:
+    types: [opened, reopened, edited]
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
