--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           release-type: node
           pull-request-title-pattern: "release${scope}: ${component} ${version}"
+          labels: ["autorelease: pending", "automerge"]
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
