--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,7 +2,7 @@ name: Build
 on:
   push:
   pull_request:
-    types: [opened, reopened, edited]
+    types: [opened, reopened, synchronize]
     branches: [main]
 jobs:
   build:
