--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -1,1 +1,9 @@
 version = 1
+
+[merge]
+method = "squash"
+delete_branch_on_merge = true
+
+[merge.automerge_dependencies]
+versions = ["minor", "patch"]
+usernames = ["dependabot"]
