--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "feed": "^4.2.2",
     "handlebars": "^4.7.7",
     "marked": "^4.3.0",
     "sanitize-html": "^2.10.0",
