--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint src test"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.2.4",
     "@types/marked": "^4.0.8",
     "@types/node": "^18.11.10",
@@ -26,6 +27,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "glob": "^10.2.2",
     "jest": "^29.3.1",
     "prettier": "^2.8.7",
     "typescript": "*"
