--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "sanitize-html": "^2.10.0",
     "ts-command-line-args": "^2.4.2"
   },
+  "resolutions": {
+    "eslint/**/strip-ansi": "^6"
+  },
   "publishConfig": {
     "access": "public"
   },
