--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-      - run: yarn install --frozen-lockfile --check-files
+      - run: yarn install --immutable
       - run: yarn lint
       - run: yarn build
       - run: yarn test
