--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ tsconfig.tsbuildinfo
 yarn-error
 .vscode
 yarn-error.log
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
