--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
+          scope: "@nzdjb"
       - run: yarn install --immutable
       - run: yarn lint
       - run: yarn build
