--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest-extended": "^2.0.0",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.3.1",
+    "jest-extended": "^4.0.1",
     "prettier": "^3.0.0",
     "typescript": "*"
   },
