--- a/tsconfig.json
+++ b/tsconfig.json
@@ -95,6 +95,10 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
+  "include": [
+    "src/**/*",
+    "test/**/*"
+  ],
   "files": [
     "node_modules/jest-extended/types/index.d.ts"
   ]
