--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-config-standard-with-typescript": "latest",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest-extended": "^2.0.0",
     "eslint-plugin-n": "^16.0.1",
