--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,10 +18,9 @@ jobs:
         with:
           fetch-depth: 0
       - uses: google-github-actions/release-please-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_PLEASE_TOKEN }}
         id: release
         with:
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           release-type: node
           pull-request-title-pattern: "release${scope}: ${component} ${version}"
           labels: |
