--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,11 +1,14 @@
 {
   "packages": {
     ".": {
-      "changelog-path": "CHANGELOG.md",
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
+      "changelog-path": "CHANGELOG.md",
       "draft": false,
-      "prerelease": false
+      "labels": ["autorelease: pending", "automerge"],
+      "prerelease": false,
+      "pull-request-title-pattern": "release${scope}: ${component} ${version}",
+      "release-type": "node"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
