build: Fix name of label config.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,7 +5,7 @@
       "bump-patch-for-minor-pre-major": false,
       "changelog-path": "CHANGELOG.md",
       "draft": false,
-      "labels": ["autorelease: pending", "automerge"],
+      "label": ["autorelease: pending", "automerge"],
       "prerelease": false,
       "pull-request-title-pattern": "release${scope}: ${component} ${version}",
       "release-type": "node"
