chore: Revert "build: Move automerge to extra label."
This reverts commit 77f63ca019132860060158e2ee216d89a56c5882.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,8 +5,7 @@
       "bump-patch-for-minor-pre-major": false,
       "changelog-path": "CHANGELOG.md",
       "draft": false,
-      "extra-label": "automerge",
-      "label": "autorelease: pending",
+      "label": ["autorelease: pending", "automerge"],
       "prerelease": false,
       "pull-request-title-pattern": "release${scope}: ${component} ${version}"
     }
