--- a/package.json
+++ b/package.json
@@ -6,36 +6,33 @@
   "repository": "https://github.com/nzdjb/static-site-generator",
   "author": "nzdjb",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "node --test",
     "lint": "eslint src test"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
-    "@types/jest": "^29.2.4",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.1.0",
     "@types/sanitize-html": "^2.9.0",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "esbuild": "^0.20.0",
-    "esbuild-jest": "^0.5.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "latest",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest-extended": "^2.0.0",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "jest": "^29.3.1",
-    "jest-extended": "^4.0.1",
     "prettier": "^3.0.0",
     "typescript": "*"
   },
   "bin": "dist/src/index.js",
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "es-main": "^1.3.0",
     "glob": "^10.2.7",
     "handlebars": "^4.7.7",
     "marked": "^12.0.0",
