--- a/.github/workflows/label-release-branch.yml
+++ b/.github/workflows/label-release-branch.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
       - name: Label
         uses: actions-ecosystem/action-add-labels@v1
-        if: "github.event.pull_request.author_association == OWNER && ${{ startsWith(github.event.pull_requesst.title, 'chore(main): release') }}"
+        if: github.event.pull_request.author_association == OWNER && ${{ startsWith(github.event.pull_request.title, format('chore(main){0} release', ':')) }}
         with:
           labels: automerge
