--- a/.github/workflows/label-release-branch.yml
+++ b/.github/workflows/label-release-branch.yml
@@ -9,7 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Label
-        uses: actions-ecosystem/action-add-labels@v1
+        uses: actions/github-script@v7
         if: github.event.pull_request.author_association == OWNER && ${{ startsWith(github.event.pull_request.title, format('chore(main){0} release', ':')) }}
         with:
-          labels: automerge
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.payload.pull_request.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['automerge']
+            })
