--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,3 +22,13 @@ jobs:
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           release-type: node
+      - uses: actions/github-script@v7
+        if: steps.release.outputs.prs_created
+        with:
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: steps.release.outputs.pr.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['automerge']
+            })
