--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           script: |
             github.rest.issues.addLabels({
-              issue_number: steps.release.outputs.pr.number,
+              issue_number: ${{ steps.release.outputs.pr.number }},
               owner: context.repo.owner,
               repo: context.repo.repo,
               labels: ['automerge']
