--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -24,10 +24,12 @@ jobs:
           release-type: node
       - uses: actions/github-script@v7
         if: ${{ steps.release.outputs.prs_created }}
+        env:
+          ISSUE_NUMBER: ${{ steps.release.outputs.pr.number }}
         with:
           script: |
             github.rest.issues.addLabels({
-              issue_number: ${{ steps.release.outputs.pr.number }},
+              issue_number: ${ISSUE_NUMBER},
               owner: context.repo.owner,
               repo: context.repo.repo,
               labels: ['automerge']
