--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "author": "nzdjb",
   "license": "MIT",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "test": "node --test",
     "lint": "eslint src test"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/glob": "^8.1.0",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.1.0",
@@ -21,13 +26,13 @@
     "esbuild": "^0.21.0",
     "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "latest",
-    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^17.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^3.0.0",
-    "typescript": "*"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.0",
+    "yarn": "^1.22.22"
   },
   "bin": "dist/src/index.js",
   "dependencies": {
