build: Fix release labelling.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -25,10 +25,10 @@ jobs:
       - uses: actions/github-script@v7
         if: ${{ steps.release.outputs.prs_created == 'true' }}
         env:
-          ISSUE_NUMBER: ${{ steps.release.outputs.pr.number }}
+          PR: ${{ steps.release.outputs.pr }}
         with:
           script: |
-            const ISSUE_NUMBER = process.env.ISSUE_NUMBER
+            const ISSUE_NUMBER = JSON.parse(process.env.PR).number
             github.rest.issues.addLabels({
               issue_number: ISSUE_NUMBER,
               owner: context.repo.owner,
