--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,10 +13,8 @@
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
-	// "mounts": [
-	// 	"source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"
-	// ],
-	"postCreateCommand": "sudo chown node node_modules && yarn install",
-	"workspaceMount": "type=bind,source=${localWorkspaceFolder},target=/workspaces/static-website-generator",
-	"workspaceFolder": "/workspaces/static-website-generator"
+	"mounts": [
+		"source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"
+	],
+	"postCreateCommand": "sudo chown node node_modules && yarn install"
 }
