feat: Footnote support.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "glob": "^11.0.0",
     "handlebars": "^4.7.7",
     "marked": "^16.2.1",
+    "marked-footnote": "^1.4.0",
     "sanitize-html": "^2.10.0",
     "ts-command-line-args": "^2.4.2"
   },
