--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint src test"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/glob": "^9.0.0",
     "@types/node": "^25.0.2",
     "@types/sanitize-html": "^2.9.0",
