--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "test": "node --test",
-    "lint": "eslint src test *.mjs"
+    "lint": "eslint"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
