--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "test": "node --test",
-    "lint": "eslint src test"
+    "lint": "eslint"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
@@ -26,7 +26,6 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-n": "^17.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-promise": "^7.1.0",
     "prettier": "^3.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.2.0"
